--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
+    id 'java'
     id 'com.github.johnrengelman.shadow' version '4.0.1'
-    id 'java-library'
-    id "com.dorongold.task-tree" version "1.3.1"
+    id "net.ltgt.apt-idea" version "0.18"
 }
 
 sourceCompatibility = 1.8
@@ -10,7 +10,9 @@ targetCompatibility = 1.8
 dependencies {
     implementation 'com.google.guava:guava:23.0'
     implementation 'com.amazon.alexa:ask-sdk:2.7.1'
-    implementation 'com.google.inject:guice:4.1.0'
+    implementation 'com.google.dagger:dagger:2.17'
+
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
 
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
